tests/ui/error-codes/E0779.rs
#[instruction_set(arm::magic)] //~ ERROR
fn main() {}
